# MustangGL

./: .gitignore  CMakeLists.txt  main.cpp  math_util.h  mesh.cpp  mesh.hpp  texture.cpp  texture.hpp  utilities.cpp  utilities.h  window.cpp  window.hpp
models/: AbstractModel.h  RoadModel.cpp  RoadModel.h  VehicleModel.cpp  VehicleModel.h
scene/: MainScene.cpp  MainScene.h
scenes/: MainScene.cpp  MainScene.h  SceneColors.h  SceneFog.cpp  SceneFog.h  SceneLight.cpp  SceneLight.h
